AC_PREREQ([2.69])
AC_INIT([puterstructions-tools], [0.4], [devops@puterstructions.com])
AM_INIT_AUTOMAKE([foreign std-options check-news dist-zip tar-pax])
AC_CONFIG_FILES([
                 src/Makefile
                 lib/Makefile
                 docs/Makefile
                 docker/Makefile
                 Makefile
                 ])
AC_OUTPUT
